codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__safety_access_block_event_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
ⓘ This content can't be shown
  We take extra caution with requests involving biological research and
  applications that could pose safety risks. If you’re a researcher at an
  approved organization, you may be able to apply for Trusted Access.
  Trusted Access: https://openai.com/form/trusted-access-for-life-sciences
  Learn more: https://help.openai.com/en/articles/20001326
